--- a/v2.1/getting-started/kubernetes/installation/hosted/calico.yaml
+++ b/v2.1/getting-started/kubernetes/installation/hosted/calico.yaml
@@ -126,7 +126,7 @@ spec:
         # container programs network policy and routes on each
         # host.
         - name: calico-node
-          image: {{page.registry}}/{{site.imageNames["node"]}}:{{site.data.versions[page.version].first.title}}
+          image: {{page.registry}}{{site.imageNames["node"]}}:{{site.data.versions[page.version].first.title}}
           env:
             # The location of the Calico etcd cluster.
             - name: ETCD_ENDPOINTS
@@ -313,7 +313,7 @@ spec:
       serviceAccountName: calico-kube-controllers
       containers:
         - name: calico-kube-controllers
-          image: {{page.registry}}/{{site.imageNames["calicoKubeControllers"]}}:{{site.data.versions[page.version].first.components["calico/kube-controllers"].version}}
+          image: {{page.registry}}{{site.imageNames["calicoKubeControllers"]}}:{{site.data.versions[page.version].first.components["calico/kube-controllers"].version}}
           env:
             # The location of the Calico etcd cluster.
             - name: ETCD_ENDPOINTS
