--- a/v2.1/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only/1.7/calico.yaml
+++ b/v2.1/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only/1.7/calico.yaml
@@ -112,7 +112,7 @@ spec:
       # as a host-networked pod.
       serviceAccountName: calico-node
       containers:
-      - image: {{page.registry}}/{{site.imageNames["typha"]}}:{{site.data.versions[page.version].first.components["typha"].version}}
+      - image: {{page.registry}}{{site.imageNames["typha"]}}:{{site.data.versions[page.version].first.components["typha"].version}}
         name: calico-typha
         # Uncomment these lines to enable a secrets volume for use with federated endpoint identity.
         #volumeMounts:
@@ -217,7 +217,7 @@ spec:
         # container programs network policy and routes on each
         # host.
         - name: calico-node
-          image: {{page.registry}}/{{site.imageNames["node"]}}:{{site.data.versions[page.version].first.title}}
+          image: {{page.registry}}{{site.imageNames["node"]}}:{{site.data.versions[page.version].first.title}}
           env:
             # Use Kubernetes API as the backing datastore.
             - name: DATASTORE_TYPE
