--- a/v2.2/getting-started/kubernetes/installation/hosted/calicoq.yaml
+++ b/v2.2/getting-started/kubernetes/installation/hosted/calicoq.yaml
@@ -4,7 +4,7 @@ layout: null
 # {{site.prodname}} Version {{site.data.versions[page.version].first.title}}
 # {{site.baseurl}}{{page.version}}/releases#{{site.data.versions[page.version].first.title}}
 # This manifest includes the following component versions:
-#   {{page.registry}}/{{site.imageNames["calicoq"]}}:{{site.data.versions[page.version].first.components["calicoq"].version}}
+#   {{page.registry}}{{site.imageNames["calicoq"]}}:{{site.data.versions[page.version].first.components["calicoq"].version}}
 
 apiVersion: v1
 kind: Pod
@@ -17,7 +17,7 @@ spec:
   - name: cnx-pull-secret
   containers:
   - name: calicoq
-    image: {{page.registry}}/{{site.imageNames["calicoq"]}}:{{site.data.versions[page.version].first.components["calicoq"].version}}
+    image: {{page.registry}}{{site.imageNames["calicoq"]}}:{{site.data.versions[page.version].first.components["calicoq"].version}}
     command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
     env:
     - name: ETCD_ENDPOINTS
