--- a/_includes/master/manifests/compliance/compliance-server.yaml
+++ b/_includes/master/manifests/compliance/compliance-server.yaml
@@ -1,13 +1,3 @@
-{% comment %}
-compliance-server.yaml acccepts the following include flags:
-
-| Name         | Accepted Values          |
-|--------------|--------------------------|
-| elasticsearch| secure, <unset>          |
-| datastore    | kdd, etcd                |
-
-{% endcomment -%}
-
 
 kind: ServiceAccount
 apiVersion: v1
@@ -33,7 +23,7 @@ rules:
       - get
       - list
       - watch
-{%- if include.datastore == "kdd" %}
+{{- if eq .Values.datastore "kdd" }}      
   - apiGroups: ["crd.projectcalico.org"]
     resources:
       - globalnetworkpolicies
@@ -45,7 +35,7 @@ rules:
       - globalthreatfeeds
     verbs:
       - "*"
-{%- endif %}
+{{- end }}
 
 ---
 
@@ -114,11 +104,11 @@ spec:
         - name: cnx-pull-secret
       containers:
         - name: compliance-server
-          image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["compliance-server"]}}:{{site.data.versions[page.version].first.components["compliance-server"].version}}
+          image: {{.Values.complianceServer.image}}:{{.Values.complianceServer.tag}}
           env:
             - name: LOG_LEVEL
               value: "warning"
-{%- if include.elasticsearch == 'secure' %}
+{{- if .Values.secure_es }}
             - name: ELASTIC_HOST
               valueFrom:
                 configMapKeyRef:
@@ -143,24 +133,24 @@ spec:
               value: "true"
             - name: ELASTIC_CA
               value: /etc/compliance/elastic/ca.pem
-{%- else %}
+{{- else }}
             - name: ELASTIC_HOST
               value: elasticsearch-tigera-elasticsearch.calico-monitoring.svc.cluster.local
             - name: ELASTIC_PORT
               value: "9200"
             - name: ELASTIC_SSL_VERIFY
               value: "false"
-{%- endif %}
-{%- if include.elasticsearch == 'secure' %}
+{{- end }}
+{{- if .Values.secure_es }}
           volumeMounts:
             - name: elastic-ca-cert-volume
               mountPath: /etc/compliance/elastic
-{%- endif %}
-{%- if include.elasticsearch == 'secure' %}
+{{- end }}
+{{- if .Values.secure_es }}
       volumes:
         # Should be created during installation process.
         - name: elastic-ca-cert-volume
           configMap:
             name: elastic-ca-config
-{%- endif %}
+{{- end }}
 
