--- a/_includes/master/manifests/compliance/compliance-snapshotter.yaml
+++ b/_includes/master/manifests/compliance/compliance-snapshotter.yaml
@@ -1,12 +1,3 @@
-{% comment %}
-compliance-snapshotter.yaml acccepts the following include flags:
-
-| Name         | Accepted Values          |
-|--------------|--------------------------|
-| elasticsearch| secure, <unset>          |
-| datastore    | kdd, etcd                |
-
-{% endcomment -%}
 
 kind: ServiceAccount
 apiVersion: v1
@@ -33,7 +24,7 @@ rules:
       - get
       - list
       - watch
-{%- if include.datastore == "kdd" %}
+{{- if eq .Values.datastore "kdd" }}      
   - apiGroups: ["crd.projectcalico.org"]
     resources:
       - globalnetworkpolicies
@@ -45,7 +36,7 @@ rules:
       - get
       - list
       - watch
-{%- endif %}
+{{- end }}
 
 ---
 
@@ -97,7 +88,7 @@ spec:
         - name: cnx-pull-secret
       containers:
         - name: compliance-snapshotter
-          image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["compliance-snapshotter"]}}:{{site.data.versions[page.version].first.components["compliance-snapshotter"].version}}
+          image: {{.Values.complianceSnapshotter.image}}:{{ .Values.complianceSnapshotter.tag }}
           env:
             - name: LOG_LEVEL
               value: "warning"
@@ -107,7 +98,7 @@ spec:
               value: ""
             - name: ELASTIC_SCHEME
               value: ""
-{%- if include.elasticsearch == 'secure' %}
+{{- if .Values.secure_es }}
             - name: ELASTIC_HOST
               valueFrom:
                 configMapKeyRef:
@@ -132,23 +123,23 @@ spec:
               value: "true"
             - name: ELASTIC_CA
               value: /etc/compliance/elastic/ca.pem
-{%- else %}
+{{- else }}
             - name: ELASTIC_HOST
               value: elasticsearch-tigera-elasticsearch.calico-monitoring.svc.cluster.local
             - name: ELASTIC_PORT
               value: "9200"
             - name: ELASTIC_SSL_VERIFY
               value: "false"
-{%- endif %}
-{%- if include.elasticsearch == 'secure' %}
+{{- end }}
+{{- if .Values.secure_es }}
           volumeMounts:
             - name: elastic-ca-cert-volume
               mountPath: /etc/compliance/elastic
-{%- endif %}
-{%- if include.elasticsearch == 'secure' %}
+{{- end }}
+{{- if .Values.secure_es }}
       volumes:
         # Should be created during installation process.
         - name: elastic-ca-cert-volume
           configMap:
             name: elastic-ca-config
-{%- endif %}
+{{- end }}
