--- a/glide.yaml
+++ b/glide.yaml
@@ -2,6 +2,7 @@ package: github.com/projectcalico/felix
 homepage: https://projectcalico.org
 license: Apache-2.0
 import:
+- package: github.com/google/gopacket
 - package: github.com/containernetworking/cni
   version: v0.5.2
   subpackages:
