ignore dev binaries

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@
 bin
 vendor
 *.coverprofile
+cmd/controller/controller
+cmd/reporter/reporter
+cmd/server/server
+cmd/snapshotter/snapshotter
 
 # vim
 *.sw*
