allow helm plugin to choose which helm chart to render

--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/monitor-calico.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/monitor-calico.yaml
@@ -1,7 +1,7 @@
 ---
 layout: null
 ---
-{% helm --execute templates/monitor-calico.yaml %}
+{% helm tigera-secure-lma --execute templates/monitor-calico.yaml %}
 secure_es: false
 elasticsearchType: operator
 {% endhelm %}
