--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/operator.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/operator.yaml
@@ -1,6 +1,6 @@
 ---
 layout: null
 ---
-{% helm --execute templates/operator.yaml %}
+{% helm tigera-secure-lma --execute templates/operator.yaml %}
 elasticsearchType: operator
 {% endhelm %}
