--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/monitor-calico.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/monitor-calico.yaml
@@ -1,7 +1,12 @@
 ---
 layout: null
 ---
-{% helm --execute templates/monitor-calico.yaml --execute templates/es-proxy.yaml %}
+{% helm --execute templates/es-proxy.yaml %}
+secure_es: true
+elasticsearchType: external
+{% endhelm %}
+
+{% helm tigera-secure-lma --execute templates/monitor-calico.yaml %}
 secure_es: true
 elasticsearchType: external
 {% endhelm %}
