--- a/master/getting-started/openshift/secure-es/monitor-calico.yaml
+++ b/master/getting-started/openshift/secure-es/monitor-calico.yaml
@@ -1,7 +1,13 @@
 ---
 layout: null
 ---
-{% helm --execute templates/monitor-calico.yaml --execute templates/es-proxy.yaml %}
+{% helm --execute templates/es-proxy.yaml %}
+secure_es: true
+orch: openshift
+elasticsearchType: external
+{% endhelm %}
+
+{% helm tigera-secure-lma --execute templates/monitor-calico.yaml %}
 secure_es: true
 orch: openshift
 elasticsearchType: external
