--- a/master/getting-started/openshift/secure-es/operator.yaml
+++ b/master/getting-started/openshift/secure-es/operator.yaml
@@ -1,7 +1,7 @@
 ---
 layout: null
 ---
-{% helm --execute templates/operator.yaml %}
+{% helm tigera-secure-lma --execute templates/operator.yaml %}
 orch: openshift
 elasticsearchType: external
 {% endhelm %}
