--- a/_includes/master/manifests/cloud-controllers.yaml
+++ b/_includes/master/manifests/cloud-controllers.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.cloudControllers.enabled -}}
 # Create the ServiceAccount and roles necessary for Tigera Cloud Controllers.
 apiVersion: v1
 kind: ServiceAccount
@@ -178,4 +179,4 @@ spec:
             secretName: calico-etcd-secrets
             defaultMode: 0400
 {{- end }}
-
+{{- end }}
