--- a/master/getting-started/kubernetes/installation/manifests/aws-sg-integration/cloud-controllers.yaml
+++ b/master/getting-started/kubernetes/installation/manifests/aws-sg-integration/cloud-controllers.yaml
@@ -4,4 +4,6 @@ layout: null
 {% helm --execute templates/cloud-controllers.yaml %}
 datastore: kdd
 network: calico
+cloudControllers:
+  enabled: true
 {% endhelm %}
