cnx-apiserver liveness to /version (#973)
Signed-off-by: Spike Curtis <spike@tigera.io>

--- a/_includes/master/manifests/cnx.yaml
+++ b/_includes/master/manifests/cnx.yaml
@@ -422,7 +422,7 @@ spec:
 {{- end }}
         livenessProbe:
           httpGet:
-            path: /apis/
+            path: /version
             port: 5443
             scheme: HTTPS
           initialDelaySeconds: 90
