--- a/_includes/v2.3/manifests/cnx.yaml
+++ b/_includes/v2.3/manifests/cnx.yaml
@@ -432,7 +432,7 @@ spec:
 {%- endif %}
         livenessProbe:
           httpGet:
-            path: /apis/
+            path: /version
             port: 5443
             scheme: HTTPS
           initialDelaySeconds: 90
