Run fluentd container as root (#954)

--- a/_includes/v2.3/manifests/monitor-calico.yaml
+++ b/_includes/v2.3/manifests/monitor-calico.yaml
@@ -441,20 +441,12 @@ spec:
       serviceAccountName: tigera-fluentd
       imagePullSecrets:
         - name: cnx-pull-secret
-      initContainers:
-        # The fluentd image runs as user 1000, so make /var/log/calico writable by them
-        - name: chown-logs
-          image: busybox
-          command: ['sh', '-c', 'chown -R 1000:1000 /var/log/calico']
-          securityContext:
-            privileged: true
-          volumeMounts:
-            - name: var-log-calico
-              mountPath: /var/log/calico
       containers:
         - name: fluentd
           image: {{page.registry}}{{site.imageNames["fluentd"]}}:{{site.data.versions[page.version].first.components["fluentd"].version}}
           env:
+            - name: FLUENT_UID
+              value: "0"
             - name: ELASTIC_INDEX_SUFFIX
               valueFrom:
                 configMapKeyRef:
