--- a/_includes/master/manifests/monitor-calico.yaml
+++ b/_includes/master/manifests/monitor-calico.yaml
@@ -409,20 +409,12 @@ spec:
       serviceAccountName: tigera-fluentd
       imagePullSecrets:
         - name: cnx-pull-secret
-      initContainers:
-        # The fluentd image runs as user 1000, so make /var/log/calico writable by them
-        - name: chown-logs
-          image: busybox
-          command: ['sh', '-c', 'chown -R 1000:1000 /var/log/calico']
-          securityContext:
-            privileged: true
-          volumeMounts:
-            - name: var-log-calico
-              mountPath: /var/log/calico
       containers:
         - name: fluentd
           image: {{.Values.fluentd.image}}:{{.Values.fluentd.tag}}
           env:
+            - name: FLUENT_UID
+              value: "0"
             - name: ELASTIC_INDEX_SUFFIX
               valueFrom:
                 configMapKeyRef:
