change to more sensible default values for network and ipam in helm

--- a/_includes/master/charts/calico/values.yaml
+++ b/_includes/master/charts/calico/values.yaml
@@ -1,7 +1,7 @@
 federation:
   enabled: false
-network: "none"
-calico_ipam: false
+network: calico
+calico_ipam: true
 datastore: kdd
 app_layer_policy:
   enabled: false
