--- a/_includes/master/charts/calico/Chart.yaml
+++ b/_includes/master/charts/calico/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-description: Calico
-name: calico
-version: 0.1.0
+description: Tigera Secure Enterprise Edition
+name: tigera-secure-ee
+version: 0.1.0-0
 appVersion: master
