add 3rd party LMA CRDs and option to disable them

--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/monitor-calico.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/monitor-calico.yaml
@@ -9,4 +9,5 @@ elasticsearchType: external
 {% helm tigera-secure-lma --execute templates/monitor-calico.yaml %}
 secure_es: true
 elasticsearchType: external
+createCustomResources: false
 {% endhelm %}
