--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/operator.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/operator.yaml
@@ -3,4 +3,5 @@ layout: null
 ---
 {% helm tigera-secure-lma --execute templates/operator.yaml %}
 elasticsearchType: external
+createCustomResources: false
 {% endhelm %}
