--- a/master/getting-started/openshift/secure-es/monitor-calico.yaml
+++ b/master/getting-started/openshift/secure-es/monitor-calico.yaml
@@ -11,4 +11,5 @@ elasticsearchType: external
 secure_es: true
 orch: openshift
 elasticsearchType: external
+createCustomResources: false
 {% endhelm %}
