--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/monitor-calico.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/monitor-calico.yaml
@@ -4,4 +4,5 @@ layout: null
 {% helm tigera-secure-lma --execute templates/monitor-calico.yaml %}
 secure_es: false
 elasticsearchType: operator
+createCustomResources: false
 {% endhelm %}
