--- a/master/getting-started/openshift/secure-es/operator.yaml
+++ b/master/getting-started/openshift/secure-es/operator.yaml
@@ -4,4 +4,5 @@ layout: null
 {% helm tigera-secure-lma --execute templates/operator.yaml %}
 orch: openshift
 elasticsearchType: external
+createCustomResources: false
 {% endhelm %}
