--- a/artifacts/calico/globalreporttype.yaml
+++ b/artifacts/calico/globalreporttype.yaml
@@ -18,7 +18,6 @@ spec:
   includeEndpointFlowLogData: true
   auditEventsSelection:
     resources:
-      - TypeMeta:
-          kind: 'globalnetworkpolicy'
+      - kind: 'globalnetworkpolicy'
         name: 'grt-aes-gnp'
         namespace: 'grt-aes-gnp-ns'
