--- a/master/manifests/compliance/secure-es/compliance.yaml
+++ b/master/manifests/compliance/secure-es/compliance.yaml
@@ -2,33 +2,7 @@
 layout: null
 ---
 
-# ------------------------------------------------------------------------------------------
-# compliance-server
-# ------------------------------------------------------------------------------------------
-
-{% helm --execute templates/compliance/compliance-server.yaml %}
-secure_es: true
-datastore: "etcd"
-{% endhelm %}
-
----
-
-# ------------------------------------------------------------------------------------------
-# compliance-snapshotter
-# ------------------------------------------------------------------------------------------
-
-{% helm --execute templates/compliance/compliance-snapshotter.yaml %}
-secure_es: true
-datastore: "etcd"
-{% endhelm %}
-
----
-
-# ------------------------------------------------------------------------------------------
-# compliance-controller
-# ------------------------------------------------------------------------------------------
-
-{% helm --execute templates/compliance/compliance-controller.yaml %}
+{% helm --execute templates/compliance/compliance-server.yaml  --execute templates/compliance/compliance-snapshotter.yaml  --execute templates/compliance/compliance-controller.yaml %}
 secure_es: true
 datastore: "etcd"
 {% endhelm %}
