--- a/glide.yaml
+++ b/glide.yaml
@@ -10,6 +10,7 @@ import:
   - pkg/transport
 - package: github.com/projectcalico/libcalico-go
   repo: git@github.com:tigera/libcalico-go-private.git
+  version: b366ebe3298bca1d6a2b74e8c81d8bd529b70c97
   subpackages:
   - lib/apiconfig
   - lib/apis/v3
