--- a/glide.yaml
+++ b/glide.yaml
@@ -35,3 +35,6 @@ import:
 - package: github.com/mailru/easyjson
   version: 1de009706dbeb9d05f18586f0735fcdb7c524481
 - package: github.com/caimeo/iniflags
+- package: github.com/x-cray/logrus-prefixed-formatter
+  version: ^0.5.2
+- package: github.com/mgutz/ansi
