CNX-7148: Add globalthreatfeeds/status resource to RBAC for intrusion-detection-controller

--- a/_includes/master/charts/tigera-secure-lma/templates/monitor-calico.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/monitor-calico.yaml
@@ -802,6 +802,7 @@ rules:
       - "projectcalico.org"
     resources:
       - globalthreatfeeds
+      - globalthreatfeeds/status
       - globalnetworksets
     verbs: ["*"]
 ---
