--- a/_includes/master/manifests/cnx.yaml
+++ b/_includes/master/manifests/cnx.yaml
@@ -94,11 +94,13 @@ data:
 {{- end }}
 ---
 
+{{- if eq .Values.manager.service.type "NodePort" }}
 # Optionally update this Service to change how Tigera Secure EE Manager is accessed.
 # If using Google login, the URL for the web server must be configured
 # as a redirect URI in the Google project.  If the web server will be
 # accessed at https://<host>:<port>, add https://<host>:<port>/login/oidc/callback
 # to the redirect URI list for the project.
+{{- end }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -112,8 +114,16 @@ spec:
   ports:
     - port: 9443
       targetPort: 9443
-      nodePort: 30003
-  type: NodePort
+{{- if .Values.manager.service.nodePort }}
+      nodePort: {{ .Values.manager.service.nodePort }}
+{{- end }}
+  type: {{ .Values.manager.service.type }}
+{{- if .Values.manager.service.clusterIP }}
+  clusterIP: {{ .Values.manager.service.clusterIP }}
+{{- end }}
+{{- if .Values.manager.service.loadBalancerIP }}
+  loadBalancerIP: {{ .Values.manager.service.loadBalancerIP }}
+{{- end }}
 
 ---
 
